# OpticalTable

./: .gitattributes  .gitignore  OpticalTable_Documentation.docx  README.md  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
public/: index.html  optical_table_22.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
